tests/ui/nll/ice-106874.stderr
error: implementation of `FnOnce` is not general enough
  --> $DIR/ice-106874.rs:8:5
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'0 mut V)` must implement `FnOnce<(&mut V,)>`, for some specific lifetime `'0`...
   = note: ...but it actually implements `FnOnce<(&'1 mut V,)>`, for some specific lifetime `'1`

error: implementation of `FnOnce` is not general enough
  --> $DIR/ice-106874.rs:8:5
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ implementation of `FnOnce` is not general enough
   |
   = note: closure with signature `fn(&'0 mut V)` must implement `FnOnce<(&mut V,)>`, for some specific lifetime `'0`...
   = note: ...but it actually implements `FnOnce<(&'1 mut V,)>`, for some specific lifetime `'1`
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:7
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:9
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |         ^^^^^^

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:9
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:9
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:41
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |                                         ^

error: higher-ranked subtype error
  --> $DIR/ice-106874.rs:8:41
   |
LL |     A(B(C::new(D::new(move |st| f(st)))))
   |                                         ^
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 10 previous errors

